--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,7 @@
           if (result) {
             $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
            setTimeout(function() {
-            window.location.href = "/restaurant";
+            window.location.href = "/books";
            }, 4000);
 
         } else if (authResult['error']) {
