--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -7,11 +7,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">BooksCatalog</a>
+          <a class="navbar-brand" href="/">BooksCatalog</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/books">Books</a></li>
           </ul>
