--- a/templates/book_titles.html
+++ b/templates/book_titles.html
@@ -3,13 +3,15 @@
 {% block body%}
 
 <h1>Book Series: </h1>
+<a href= "{{ url_for('newBookSeries')}}">ADD New Book Series</a>
+</br>
+</br>
 {% for i in bookseries %}
-
 <div class="container">
-  <h4><a href= "{{ url_for('booklist',bookseries_id=i.id, individualbook_id=i.id)}}">{{i.name}}</a></h4>
+  <h4><a href= "{{ url_for('booklist',bookseries_id=i.id)}}">{{i.name}}</a></h4>
+  <p> <a href= "{{ url_for('editBookSeries',bookseries_id=i.id)}}">Edit</a> </p>
+  <p> <a href = "{{ url_for('deleteBookSeries',bookseries_id=i.id)}}">Delete BookSeries</a> </p>
 </div>
 
 {% endfor %}
-<a href= #>ADD New</a>
-</br>
 {% endblock %}
