--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -12,7 +12,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/about">About</a></li>
-            <li><a href="/books">Books</a></li>
+            <li><a href="/bookseries">Book Series</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
