--- a/templates/bookList.html
+++ b/templates/bookList.html
@@ -4,7 +4,7 @@
 
 <h1>{{bookseries.name}}</h1>
   <div class="container">
-    <a href = '{{url_for('newBookItem', bookseries_id = bookseries.id) }}'>ADD A New Book To This Series...</a>
+    <a href = '{{url_for('bookList_new', bookseries_id = bookseries.id) }}'>ADD A New Book To This Series...</a>
     <div class = 'flash'>
     		      {% with messages = get_flashed_messages() %}
           {% if messages %}
@@ -23,12 +23,14 @@
 
 {% for i in items %}
 <div class="container">
-  <h4>{{i.name}}</h4>
-  <p>{{i.author}}</p>
+  <h4><strong>Name</strong>: {{i.name}}</h4>
+  <p><strong>Author</strong>: {{i.author}}</p>
+  <p><strong>Description</strong>: {{i.description}}</p>
+  <p><strong>Review</strong>: {{i.review}}</p>
 
-  <a href = '{{url_for('editBookItem',bookseries_id=bookseries.id, book_id=i.id)}}' >Edit</a>
+  <a href = '{{url_for('bookList_edit',bookseries_id=bookseries.id, book_id=i.id)}}' >Edit</a>
   </br>
-  <a href = '{{url_for('deleteBookItem', bookseries_id=bookseries.id, book_id=i.id)}}'>Delete</a>
+  <a href = '{{url_for('bookList_delete', bookseries_id=bookseries.id, book_id=i.id)}}'>Delete</a>
 </div>
 {% endfor %}
 
