--- a/templates/bookList_delete.html
+++ b/templates/bookList_delete.html
@@ -5,14 +5,9 @@
   <h1> Are you sure you want to delete {{item.name}}? </h1>
 
   <form action="#" method = 'post'>
-
-  <input type='submit', value = 'Delete'>
-
-
-
-
+    <input type='submit', value = 'Delete'>
   </form>
-  <a href = '{{url_for('booklist', bookseries_id=bookseries_id)}}'> Cancel </a>
+  <a href = '{{url_for('showBookList', bookseries_id=bookseries_id)}}'> Cancel </a>
 </div>
 
 {% endblock %}
