--- a/templates/bookList_edit.html
+++ b/templates/bookList_edit.html
@@ -18,6 +18,6 @@
 
 <input type='submit' value='Edit'>
 
-<a href = '{{url_for('booklist', bookseries_id=bookseries_id)}}'> Cancel </a>
+<a href = '{{url_for('showBookList', bookseries_id=bookseries_id)}}'> Cancel </a>
 </form>
 {% endblock %}
