All updated files

--- a/templates/bookList_new.html
+++ b/templates/bookList_new.html
@@ -11,11 +11,16 @@
         <dd><input type ='text' name='description' required></dd>
       <dt>Language:</dt>
         <dd><input type = 'text' size = '8' name='language' required></dd>
+      <dt>Year:</dt>
+        <dd><input type = 'text' size = '8' name='year' required></dd>
+      <dt>Genre:</dt>
+        <dd><input type = 'text' size = '8' name='genre' required></dd>
       <dt>Description:</dt>
         <dd><textarea name = 'description' rows='5' cols='40' required></textarea></dd>
+      <dt>Review:</dt>
+        <dd><textarea name = 'review' rows='5' cols='40' required></textarea></dd>
     </dl>
     <input type='submit' value='Create'>
   </form>
 </div>
-
 {% endblock %}
