--- a/templates/bookSeries_new.html
+++ b/templates/bookSeries_new.html
@@ -12,7 +12,7 @@
       <dt>Language:</dt>
         <dd><input type = 'text' size = '8' name='language' required></dd>
       <dt>Description:</dt>
-        <dd><textarea name = 'description' rows='5' cols='40' required></textarea></dd>s
+        <dd><textarea name = 'description' rows='5' cols='40' required></textarea></dd>
     </dl>
     <input type='submit' value='Create'>
   </form>
